force-app/main/default/objects/en_yojitsu__c/en_yojitsu__c.object-meta.xml
<CustomObject>
    <label>EN予実管理</label>
    <nameField>
        <displayFormat>EN-{0000}</displayFormat>
        <label>予実管理番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>