force-app/main/default/objects/en_yojitsu__c/fields/en_ankenkubun_yozitsu__c.field-meta.xml
<CustomField>
    <fullName>en_ankenkubun_yozitsu__c</fullName>
    <label>案件区分</label>
    <length>200</length>
    <type>Text</type>
</CustomField>