force-app/main/default/objects/en_yojitsu__c/fields/en_CurPeriodCom_GrossProfitMargin__c.field-meta.xml
<CustomField>
    <fullName>en_CurPeriodCom_GrossProfitMargin__c</fullName>
    <formula>IF ( OR(en_CurPeriodCom_ContractAmount__c = 0)
,0
,en_CurPeriodCom_ContractGrossProfit__c / en_CurPeriodCom_ContractAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>当期完成分_粗利率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>