force-app/main/default/objects/en_yojitsu__c/fields/en_CurrentPeriod_ContractAmount__c.field-meta.xml
<CustomField>
    <fullName>en_CurrentPeriod_ContractAmount__c</fullName>
    <formula>IF(LEFT(en_zyutyuuki__c,4) = TEXT(2024 + CurrentPeriod__c - 12),
en_juchu12__c ,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>当期受注_契約額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>