force-app/main/default/objects/en_yojitsu__c/fields/en_jutyuarari__c.field-meta.xml
<CustomField>
    <fullName>en_jutyuarari__c</fullName>
    <label>受注粗利金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>