force-app/main/default/objects/en_yojitsu__c/fields/EN_kanseiki__c.field-meta.xml
<CustomField>
    <fullName>EN_kanseiki__c</fullName>
    <label>完成期</label>
    <length>255</length>
    <type>Text</type>
</CustomField>