force-app/main/default/objects/en_yojitsu__c/fields/en_koujihinsyu__c.field-meta.xml
<CustomField>
    <fullName>en_koujihinsyu__c</fullName>
    <label>工事品種</label>
    <length>255</length>
    <type>Text</type>
</CustomField>