force-app/main/default/objects/en_yojitsu__c/fields/en_kousyuy12__c.field-meta.xml
<CustomField>
    <fullName>en_kousyuy12__c</fullName>
    <label>目標受注金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>