force-app/main/default/objects/en_yojitsu__c/fields/en_NextPeriod_ContractAmount__c.field-meta.xml
<CustomField>
    <fullName>en_NextPeriod_ContractAmount__c</fullName>
    <formula>IF( VALUE(EN_kanseiki__c) &gt; CurrentPeriod__c,
en_juchu12__c ,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>来期以降完成分_契約額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>