force-app/main/default/objects/en_yojitsu__c/fields/en_shodans__c.field-meta.xml
<CustomField>
    <fullName>en_shodans__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>EN予実管理</relationshipLabel>
    <relationshipName>en_shodansan</relationshipName>
    <type>Lookup</type>
</CustomField>