force-app/main/default/objects/en_yojitsu__c/fields/en_tantobusyo1__c.field-meta.xml
<CustomField>
    <fullName>en_tantobusyo1__c</fullName>
    <label>担当部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>