force-app/main/default/objects/en_yojitsu__c/fields/en_tokuisaki_s__c.field-meta.xml
<CustomField>
    <fullName>en_tokuisaki_s__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EN予実管理</relationshipLabel>
    <relationshipName>en_tokuisakis</relationshipName>
    <type>Lookup</type>
</CustomField>