force-app/main/default/objects/en_yojitsu__c/fields/En_uriara__c.field-meta.xml
<CustomField>
    <fullName>En_uriara__c</fullName>
    <label>売上粗利金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>