force-app/main/default/objects/en_yojitsu__c/fields/en_yojitu2__c.field-meta.xml
<CustomField>
    <fullName>en_yojitu2__c</fullName>
    <label>予実区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>予算</fullName>
            </value>
            <value>
                <fullName>実績</fullName>
                <default>true</default>
                <label>実績</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>