force-app/main/default/objects/en_yojitsu__c/fields/EN_yosan_arari__c.field-meta.xml
<CustomField>
    <fullName>EN_yosan_arari__c</fullName>
    <label>目標受注粗利金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>