force-app/main/default/objects/en_yojitsu__c/fields/en_zissekikubun__c.field-meta.xml
<CustomField>
    <fullName>en_zissekikubun__c</fullName>
    <label>実績区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>初回受注</fullName>
            </value>
            <value>
                <fullName>追加受注①</fullName>
            </value>
            <value>
                <fullName>追加追加②</fullName>
            </value>
            <value>
                <fullName>追加受注③</fullName>
            </value>
            <value>
                <fullName>追加受注④</fullName>
            </value>
            <value>
                <fullName>追加受注⑤</fullName>
            </value>
            <value>
                <fullName>追加受注⑥</fullName>
            </value>
            <value>
                <fullName>追加受注⑦</fullName>
            </value>
            <value>
                <fullName>追加受注⑧</fullName>
            </value>
            <value>
                <fullName>追加受注⑨</fullName>
            </value>
            <value>
                <fullName>追加受注⑩</fullName>
            </value>
            <value>
                <fullName>増減精算</fullName>
            </value>
            <value>
                <fullName>営繕</fullName>
            </value>
            <value>
                <fullName>再完成</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>