force-app/main/default/objects/en_yojitsu__c/fields/en_zyutyuuki__c.field-meta.xml
<CustomField>
    <fullName>en_zyutyuuki__c</fullName>
    <formula>IF ( MONTH(Yeaemonth__c) &lt; 7 ,
TEXT(YEAR(Yeaemonth__c)) &amp; &apos;年6月期&apos;,
TEXT(YEAR(Yeaemonth__c)+1) &amp; &apos;年6月期&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>受注期</label>
    <type>Text</type>
</CustomField>