force-app/main/default/objects/en_yojitsu__c/fields/User_Department__c.field-meta.xml
<CustomField>
    <fullName>User_Department__c</fullName>
    <formula>Owner:User.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>所有者_担当部署</label>
    <type>Text</type>
</CustomField>