force-app/main/default/objects/en_yojitsu__c/fields/Yeaemonth__c.field-meta.xml
<CustomField>
    <fullName>Yeaemonth__c</fullName>
    <label>年月</label>
    <type>Date</type>
</CustomField>