force-app/main/default/objects/en_yojitsu__c/fields/YearMonthText__c.field-meta.xml
<CustomField>
    <fullName>YearMonthText__c</fullName>
    <formula>TEXT( YEAR(Yeaemonth__c) ) &amp;  TEXT( MONTH(Yeaemonth__c) )</formula>
    <label>年月_テキスト</label>
    <type>Text</type>
</CustomField>