force-app/main/default/objects/en_yojitsu__c/recordTypes/en_jissekin.recordType-meta.xml
<RecordType>
    <fullName>en_jissekin</fullName>
    <active>false</active>
    <label>EN実績入力</label>
</RecordType>