force-app/main/default/objects/en_yojitsu__c/recordTypes/en_yosan1.recordType-meta.xml
<RecordType>
    <fullName>en_yosan1</fullName>
    <active>true</active>
    <label>EN予算入力</label>
</RecordType>