force-app/main/default/objects/en_yojitsu__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>en_tokuisaki_s__c</columns>
    <columns>en_yojitu2__c</columns>
    <columns>en_kousyuy12__c</columns>
    <columns>en_koujihinsyu__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>en_juchu12__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>EN_kanseiki__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>2/20/2022 12:00 AM</value>
    </filters>
    <label>すべて選択</label>
</ListView>