force-app/main/default/objects/en_yojitsu__c/listViews/en_jisseki.listView-meta.xml
<ListView>
    <fullName>en_jisseki</fullName>
    <columns>NAME</columns>
    <columns>en_zissekikubun__c</columns>
    <columns>en_shodans__c</columns>
    <columns>en_tokuisaki_s__c</columns>
    <columns>en_koujihinsyu__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>en_ankenkubun_yozitsu__c</columns>
    <columns>en_juchu12__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>en_yojitu2__c</field>
        <operation>equals</operation>
        <value>実績</value>
    </filters>
    <label>実績一覧</label>
</ListView>