force-app/main/default/objects/en_yojitsu__c/listViews/en_yozitsukanri_yosan.listView-meta.xml
<ListView>
    <fullName>en_yozitsukanri_yosan</fullName>
    <columns>Yeaemonth__c</columns>
    <columns>NAME</columns>
    <columns>en_tokuisaki_s__c</columns>
    <columns>EN_mokuhyouuriagekingaku__c</columns>
    <columns>EN_mokuhyouuriageararikingaku__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>en_tantobusyo1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>en_yojitu2__c</field>
        <operation>equals</operation>
        <value>予算</value>
    </filters>
    <filters>
        <field>Yeaemonth__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2024</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>contains</operation>
        <value>米田</value>
    </filters>
    <label>予算</label>
    <sharedTo>
        <roleAndSubordinatesInternal>en_nohara</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>