force-app/main/default/objects/en_yojitsu__c/listViews/en_zissekihyouziyou_listview.listView-meta.xml
<ListView>
    <fullName>en_zissekihyouziyou_listview</fullName>
    <columns>Yeaemonth__c</columns>
    <columns>en_shodans__c</columns>
    <columns>NAME</columns>
    <columns>en_tokuisaki_s__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>en_juchu12__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>en_yojitu2__c</field>
        <operation>equals</operation>
        <value>実績</value>
    </filters>
    <label>実績表示用</label>
</ListView>