force-app/main/default/objects/en_yojitsu__c/listViews/yosan.listView-meta.xml
<ListView>
    <fullName>yosan</fullName>
    <columns>NAME</columns>
    <columns>en_juchu12__c</columns>
    <columns>en_kousyuy12__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>en_yojitu2__c</field>
        <operation>equals</operation>
        <value>予算</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>en_yojitsu__c.en_yosan1</value>
    </filters>
    <label>予算</label>
</ListView>